# mantaray

./: .gitignore  Cargo.toml  README.md  answers.txt  build.rs  cbindgen.toml  demo.py  notes.md  pixi.toml  plot_ode_solvers.py  pyproject.toml  test.txt  y_out.txt
.github/workflows/: ci.yml  doc.yml  draft-pdf.yml  python-doc.yml  python-test.yml
data/: bathy_agulhas.nc  bathy_nazare_edited.nc  bathy_nazare_edited_bis.nc  current_agulhas.nc  spec_s2.nc  test_bathy.nc  test_bathy_3.nc
docs/: conf.py  gallery_header.rst  idealized_fields.rst  index.md  tutorial.rst
include/: ray_tracing.h
joss/: paper.bib  paper.md
notebooks/: agulhas_example.ipynb  composite.ipynb  nazare_example.ipynb  spec_2D.ipynb  src.py
notebooks/.ipynb_checkpoints/: agulhas_example-checkpoint.ipynb  nazare_example-checkpoint.ipynb  nazare_example_OLD-checkpoint.ipynb
notebooks/agulhas/.ipynb_checkpoints/: agulhas_example-checkpoint.ipynb
notebooks/agulhas/notebook/: agulhas_example.ipynb
notebooks/canonical_examples/: canonical_ray_tracing.ipynb  homepage_animation.ipynb  idealized_fields.ipynb  utils.py
notebooks/krieger-demo/: constant_spatial_current_gradient.ipynb  dev_large_scale_refraction.ipynb  dev_wavewatch_refraction.ipynb  large_scale_refraction.ipynb  large_scale_refraction_case.ipynb  small_scale_refraction.ipynb  smaller_scale_refraction_rays.nc  wave_height_validation.ipynb  wave_height_validation_dev.ipynb
notebooks/krieger-demo/.ipynb_checkpoints/: constant_spatial_current_gradient-checkpoint.ipynb  dev_wavewatch_refraction-checkpoint.ipynb  large_scale_refraction-checkpoint.ipynb  ncom_refraction_case-checkpoint.ipynb  recovered_notebook-checkpoint.ipynb  small_scale_refraction-checkpoint.ipynb  wave_height_validation-checkpoint.ipynb  wavewatch_refraction_case-checkpoint.ipynb
notebooks/krieger-demo/data/bathymetry/: wavewatch_refraction_slice_bathymetry.nc
notebooks/krieger-demo/data/currents/: large_scale_wavewatch_refraction_slice.nc  output_ncom_refraction_current_small_scale.nc  wavewatch_currents.nc  wavewatch_refraction_slice.nc
notebooks/nazare/notebook/: nazare_example.ipynb
notebooks/nazare/notebook/.ipynb_checkpoints/: nazare_example-checkpoint.ipynb
notebooks/realistic_case/: wavewatch_case.ipynb
notebooks/realistic_case/forcing/: wavewatch_bathy.nc
notebooks/theoretical_comparison/: current.nc  data_generation.ipynb  null_bathymetry.nc  null_current.nc  shear_current_-1v.nc  snells_law_verification.ipynb  step_bathymetry.nc
notebooks/theoretical_comparison/data/: deep_water_flat_bathymetry.nc  null_current.nc  shear_current_2v.nc  step_bathymetry.nc
notebooks/tutorial/: tutorial.ipynb
python/mantaray/: __init__.py  core.py  datasets.py  support.py
python/tests/: test_core.py
src/: bathymetry.rs  bathymetry_data.rs  bilinear_interpolator.rs  bundle_result.rs  cartesian_coor.rs  datatype.rs  depth.rs  error.rs  etopo.rs  ffi.rs  interpolator.rs  lib.rs  netcdf4_work.rs  ray.rs  ray_result.rs  ray_tracing_data_type.rs  step.rs  wave_ray_path.rs  writable.rs  write_json.rs
src/bathymetry/: array_depth.rs  cartesian.rs  cartesian_netcdf3.rs  constant_depth.rs  constant_slope.rs  mod.rs
src/current/: cartesian.rs  cartesian_current.rs  cartesian_file_current.rs  constant_current.rs  constant_rate_change_current.rs  function_current.rs  mod.rs
src/io/: mod.rs  netcdf.rs  utility.rs
support/: README.md  create_forcing.ipynb  linear_sea_mount.py  plot_many_rays.py  test_python_wrapper.ipynb
support/.ipynb_checkpoints/: create_forcing-checkpoint.ipynb
support/canonical_examples/: idealized_fields.ipynb
support/canonical_examples/data/currents/: homogeneous.nc
tests/: README.MD  linear_beach.rs  linear_beach_shallow.rs  linear_sea_mount.rs  test_constant_depth.rs
tests/data/: island_slice.nc  test.rs
tests/helper/: mod.rs
