[package]
name = "mantaray"
version = "0.0.6"
authors = [
  "Bryce Irving <bryceirving@mines.edu>",
  "Guilherme Castelao <guilherme@castelao.net>",
  "Nicholas Pizzo <nicholas.pizzo@uri.edu>",
  "Bia Villas Boas <villasboas@mines.edu>",
]
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mantaray"
crate-type = ["cdylib", "lib"]

[dependencies]
derive_builder = "0.20.0"
libc = { version = "0.2", optional = true }
nalgebra = "0.33.0"
netcdf3 = "0.5.2"
netcdf = {version = "0.9.1", features = ["static"]}
ode_solvers = "0.4.0"
pyo3 = { version = "0.22.0" }
rayon = "1.8.1"
serde_json = "1.0.115"
serde = {version="1.0", features=["derive"]}
thiserror = "1.0.57"

[dev-dependencies]
lockfile = "0.4.0"
tempfile = "3.10.0"

[build-dependencies]
cbindgen = { version = "0.26.0", optional = true }

[features]
capi = ["libc"]
