[package]
name = "mantaray"
version = "0.0.7"
authors = [
  "Bryce Irving <bryceirving@mines.edu>",
  "Guilherme Castelao <guilherme@castelao.net>",
  "Nicholas Pizzo <nicholas.pizzo@uri.edu>",
  "Bia Villas Boas <villasboas@mines.edu>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mantaray"
crate-type = ["cdylib", "lib"]

[dependencies]
derive_builder = "0.20.0"
libc = { version = "0.2", optional = true }
netcdf3 = "0.5.2"
netcdf = {version = "0.10.0", features = ["static"]}
ode_solvers = "0.4.0"
pyo3 = { version = "0.23.4" }
rayon = "1.8.1"
serde_json = "1.0.115"
serde = {version="1.0", features=["derive"]}
thiserror = "2.0.11"

[dev-dependencies]
lockfile = "0.4.0"
tempfile = "3.10.0"

[build-dependencies]
cbindgen = { version = "0.28.0", optional = true }

[features]
capi = ["libc"]
